force-app/main/default/objects/Coverage_Area__c/Coverage_Area__c.object-meta.xml
<CustomObject>
    <label>Coverage Area</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>Coverage Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>