force-app/main/default/objects/Coverage_Area__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>Código de Endereçamento Postal</description>
    <externalId>true</externalId>
    <label>CEP</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>