force-app/main/default/objects/Coverage_Area__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Nome da cidade.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>