force-app/main/default/objects/Coverage_Area__c/fields/Has_Fiber_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Has_Fiber_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se o CEP tem fibra ótica</description>
    <label>Has Fiber Coverage</label>
    <type>Checkbox</type>
</CustomField>