force-app/main/default/objects/Coverage_Area__c/fields/Max_Speed_Available__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed_Available__c</fullName>
    <description>Velocidade máxima disponível</description>
    <label>Max Speed Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>300 Mbps</fullName>
            </value>
            <value>
                <fullName>600 Mbps</fullName>
            </value>
            <value>
                <fullName>1 Gbps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>