force-app/main/default/objects/Coverage_Area__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Sigla do Estado (UF)</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>